# vocateca-open-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Package.resolved  Package.swift  README.md  REPO-META.md  THIRD_PARTY_LICENSES.md  app.py  cli.py  pyproject.toml  requirements.txt
core/: api_server.py  backcat_dates.py  backlog.py  bugbundle.py  bulk_export.py  confidence.py  dedupe.py  diarize.py  discovery.py  diskguard.py  downloader.py  errors.py  events.py  filters.py  health.py  hw.py  integrity.py  load.py  log_export.py  mcp_server.py  models.py  notify_rules.py  paths.py  pipeline.py  power.py  publish.py  queue_status.py  reveal.py  rss.py  schedule_windows.py  scheduler.py  state.py  stats.py  timefmt.py  timeline.py  timewindow.py  transcriber.py  updater.py  version.py  vocab.py  (+10 more)
tests/: conftest.py  test_about_pane_width.py  test_activity_log.py  test_add_dialog_playlist.py  test_add_show_dialog_youtube.py  test_add_show_marks_decided.py  test_agents_doc.py  test_api_server.py  test_app_activation_catchup.py  test_app_context_grandfather.py  test_backcat_dates.py  test_backlog.py  test_bugbundle.py  test_bulk_export.py  test_caption_fallback.py  test_cli_add_backlog.py  test_cli_add_youtube.py  test_cli_backlog.py  test_cli_parser.py  test_cli_queue_actions.py  test_cli_roadmap_settings.py  test_cli_set.py  test_command_palette.py  test_confidence.py  test_data_dir_isolation.py  test_dedupe.py  test_diarize_skeleton.py  test_diskguard.py  test_download_pause.py  test_duration_filter.py  test_empty_state.py  test_error_taxonomy.py  (+70 more)
(+500 files in other folders)
